--- a/templates/home.html
+++ b/templates/home.html
@@ -2,11 +2,10 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Профиль</title>
+    <title>Домашняя страница</title>
 </head>
 <body>
-    <h1>Профиль пользователя {{ username }}</h1>
-    <p>{{ message }}</p>
+    <h1>Домашняя страница</h1>
     <form action="{{ url_for('get_login') }}" method="get">
         <input type="submit" value="Выйти">
     </form>
