--- a/templates/register.html
+++ b/templates/register.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8">
-    <title>Registration Form</title>
+    <title>Регистрация</title>
   </head>
   <body>
-    <h2>Registration Form</h2>
     <form action="/register" method="post">
-      <label for="username">Username:</label>
-      <input type="text" id="username" name="username"><br><br>
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password"><br><br>
-      <input type="submit" value="Register">
+      <label for="username">Имя пользователя:</label>
+      <input type="text" id="username" name="username" required>
+      <label for="password">Пароль::</label>
+      <input type="password" id="password" name="password" required>
+      <input type="submit" value="Зарегистрироваться">
     </form>
   </body>
 </html>
