--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>Профиль</title>
-</head>
-<body>
-    <h1>Профиль пользователя {{ username }}</h1>
-    <p>{{ message }}</p>
-    <form action="{{ url_for('get_login') }}" method="get">
-        <input type="submit" value="Выйти">
-    </form>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Профиль</title>
+        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    </head>
+    <body>
+        <div class="header">
+            <form action="{{ url_for('get_home') }}" method="get">
+                <input class="logo" type="submit" value="Главная страница">
+            </form>
+            <form action="{{ url_for('get_login') }}" method="get">
+                <input type="submit" value="Выйти">
+            </form>
+        </div>
+        <h1>Профиль пользователя {{ username }}</h1>
+        <p>{{ message }}</p>
+    </body>
 </html>
