--- a/templates/login.html
+++ b/templates/login.html
@@ -3,17 +3,23 @@
   <head>
     <meta charset="UTF-8">
     <title>Вход на сайт</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   </head>
   <body>
-    <form action="/login" method="post">
+    <div class="header">
+      <form action="{{ url_for('get_home') }}" method="get">
+        <input class="logo" type="submit" value="Главная страница">
+      </form>
+      <form action="{{ url_for('get_register') }}" method="get">
+        <input type="submit" value="Зарегистрироваться">
+      </form>
+    </div>
+    <form class="login-form" action="/login" method="post">
       <label for="username">Имя пользователя:</label>
       <input type="text" id="username" name="username" required>
       <label for="password">Пароль:</label>
       <input type="password" id="password" name="password" required>
       <input type="submit" value="Войти">
-    </form>
-    <form action="{{ url_for('get_register') }}" method="get">
-        <input type="submit" value="Зарегистрироваться">
     </form>
   </body>
 </html>
