--- a/templates/register.html
+++ b/templates/register.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <title>Регистрация</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   </head>
   <body>
-    <form action="/register" method="post">
-      <label for="username">Имя пользователя:</label>
-      <input type="text" id="username" name="username" required>
-      <label for="password">Пароль::</label>
-      <input type="password" id="password" name="password" required>
-      <input type="submit" value="Зарегистрироваться">
+    <form class="login-form" action="/register" method="post">
+        <label for="username">Имя пользователя:</label>
+        <input type="text" id="username" name="username" required>
+        <label for="password">Пароль:</label>
+        <input type="password" id="password" name="password" required>
+        <input type="submit" value="Зарегистрироваться">
     </form>
   </body>
 </html>
