--- a/static/style.css
+++ b/static/style.css
@@ -19,10 +19,13 @@
 
 .header .logo {
   color: white;
-  background-color: #4CAF50;
+  background-color: #2196F3;
   font-size: 24px;
 }
 
+.header .logo:hover {
+   background-color: #0D47A1;
+}
 
 .login-form {
   display: flex;
