--- a/templates/login.html
+++ b/templates/login.html
@@ -14,12 +14,13 @@
         <input type="submit" value="Зарегистрироваться">
       </form>
     </div>
+    <h1>Вход</h1>
     <form class="login-form" action="/login" method="post">
-      <label for="username">Имя пользователя:</label>
-      <input type="text" id="username" name="username" required>
-      <label for="password">Пароль:</label>
-      <input type="password" id="password" name="password" required>
-      <input type="submit" value="Войти">
-    </form>
+        <label for="username">Имя пользователя:</label>
+        <input type="text" id="username" name="username" maxlength="12" minlength="4" required>
+        <label for="password">Пароль:</label>
+        <input type="password" id="password" name="password" maxlength="12" minlength="4" required>
+        <input type="submit" value="Войти">
+      </form>
   </body>
 </html>
