--- a/templates/register.html
+++ b/templates/register.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8">
-    <title>Регистрация</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-  </head>
-  <body>
-    <form class="login-form" action="/register" method="post">
-        <label for="username">Имя пользователя:</label>
-        <input type="text" id="username" name="username" required>
-        <label for="password">Пароль:</label>
-        <input type="password" id="password" name="password" required>
-        <input type="submit" value="Зарегистрироваться">
-    </form>
-  </body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Регистрация</title>
+        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    </head>
+    <body>
+        <div class="header">
+            <form action="{{ url_for('get_home') }}" method="get">
+                <input class="logo" type="submit" value="Главная страница">
+            </form>
+        </div>
+        <h1>Регистрация</h1>
+        <form class="login-form" action="/register" method="post">
+            <label for="username">Имя пользователя:</label>
+            <input type="text" id="username" name="username" maxlength="12" minlength="4" required>
+            <label for="password">Пароль:</label>
+            <input type="password" id="password" name="password" maxlength="12" minlength="4" required>
+            <input type="submit" value="Зарегистрироваться">
+        </form>
+    </body>
 </html>
