need to fix js and python

--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
         </div>
         <h1>Чат</h1>
         <div id="messages"></div>
-        <form action="" method="post">
+        <form class="login-form" action="" method="post">
             <input type="text" name="message" placeholder="Введите сообщение:">
             <input type="submit" value="Отправить">
         </form>
