--- a/static/style.css
+++ b/static/style.css
@@ -3,24 +3,13 @@
   justify-content: space-between;
   align-items: center;
   background-color: #333;
-  color: #fff;
   padding: 10px;
-}
-
-.header a {
-  color: #fff;
-  text-decoration: none;
-  padding: 10px;
-}
-
-.header a:hover {
-  background-color: #555;
 }
 
 .header .logo {
   color: white;
-  background-color: #2196F3;
-  font-size: 24px;
+  background-color: #4169E1;
+  font-size: 22px;
 }
 
 .header .logo:hover {
@@ -30,7 +19,6 @@
 .login-form {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   height: 100vh;
 }
@@ -44,7 +32,7 @@
 }
 
 .login-form input[type="submit"] {
-  background-color: #4CAF50;
+  background-color: #4169E1;
   color: white;
   padding: 10px 20px;
   border: none;
@@ -53,5 +41,5 @@
 }
 
 .login-form input[type="submit"]:hover {
-  background-color: #3e8e41;
+  background-color: #0D47A1;
 }
