--- a/templates/home.html
+++ b/templates/home.html
@@ -6,39 +6,59 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     </head>
     <body>
-        <div class="header">
-            <form action="{{ url_for('get_home') }}" method="get">
-                <input class="logo" type="submit" value="Главная страница">
-            </form>
-            <form action="{{ url_for('get_login') }}" method="get">
-                <input type="submit" value="Выйти">
-            </form>
-        </div>
-        <h1>Чат</h1>
-        <div id="messages"></div>
-        <form class="login-form" action="" method="post">
-            <input type="text" name="message" placeholder="Введите сообщение:">
-            <input type="submit" value="Отправить">
-        </form>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.min.js"></script>
-        <script>
-            const socket = io();
-            socket.on("message", (data) => {
-                const message = JSON.parse(data);
-                const element = document.createElement("div");
-                element.textContent = `${message.user}: ${message.text}`;
-                document.getElementById("messages").appendChild(element);
-             });
+	<div class="header">
+	    <form action="{{ url_for('get_home') }}" method="get">
+		<input class="logo" type="submit" value="Главная страница">
+	    </form>
+	    <form action="{{ url_for('get_login') }}" method="get">
+		<input type="submit" value="Выйти">
+	    </form>
+	</div>
+	
+	<h1>Чат</h1>
+	<script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+	<style>
+		ul {
+			height: 300px;
+			width: 300px;
+			overflow-y: scroll;
+		}
 
-            const form = document.querySelector("form");
-            form.addEventListener("submit", (event) => {
-                event.preventDefault();
-                const message = event.target.elements.message.value;
-                socket.emit("message", {
-                    user: "User 1",
-                    text: message,
-                });
-            });
-        </script>
+		li {
+			height: min-content;
+			width: min-content;
+			list-style: none;
+			background-color: grey;
+		}
+
+		#message {
+			width: 300px;
+		}
+	</style>
+	
+	<div id="chat">
+		<ul id="chat-messages"></ul>
+		<input type="text" id="message" placeholder="Enter a Message">
+	</div>
+	<script>
+	const socket = io();
+
+	document.getElementById("message").addEventListener("keyup", function(event) {
+	    if (event.key == "Enter") {
+		let message = document.getElementById("message").value;
+		socket.emit("new_message", message);
+		document.getElementById("message").value = "";
+	    }
+	})
+
+	socket.on("chat", function(data) {
+	    let ul = document.getElementById("chat-messages");
+	    let li = document.createElement("li");
+	    let br = document.createElement("br");
+	    li.appendChild(document.createTextNode(data["username"] + ": " + data["message"]));
+	    ul.appendChild(li);
+	    ul.appendChild(br);
+	})
+	</script>
     </body>
 </html>
