--- a/static/style.css
+++ b/static/style.css
@@ -1,45 +1,49 @@
 .header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #333;
-  padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #333;
+    padding: 10px;
 }
 
 .header .logo {
-  color: white;
-  background-color: #4169E1;
-  font-size: 22px;
+    color: white;
+    background-color: #4169E1;
+    font-size: 22px;
 }
 
 .header .logo:hover {
-   background-color: #0D47A1;
+    background-color: #0D47A1;
+}
+
+.header-right {
+    display: flex;
 }
 
 .login-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
 }
 
 .login-form input[type="text"],
 .login-form input[type="password"] {
-  width: 10%;
-  height: 1%;
-  padding: 10px;
-  margin-bottom: 20px;
+    width: 10%;
+    height: 1%;
+    padding: 10px;
+    margin-bottom: 20px;
 }
 
 .login-form input[type="submit"] {
-  background-color: #4169E1;
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
+    background-color: #4169E1;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
 .login-form input[type="submit"]:hover {
-  background-color: #0D47A1;
+    background-color: #0D47A1;
 }
