--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
 				<form action="{{ url_for('get_profile') }}" method="get">
 				<input type="submit" value="Профиль">
 				</form>
-				<form action="{{ url_for('get_login') }}" method="get">
+				<form action="{{ url_for('get_logout') }}" method="get">
 				<input type="submit" value="Выйти">
 				</form>
 			</div>
