--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,7 +10,7 @@
             <form action="{{ url_for('get_home') }}" method="get">
                 <input class="logo" type="submit" value="Главная страница">
             </form>
-            <form action="{{ url_for('get_login') }}" method="get">
+            <form action="{{ url_for('get_logout') }}" method="get">
                 <input type="submit" value="Выйти">
             </form>
         </div>
