--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="header">
-            <form action="{{ url_for('get_home') }}" method="get">
+            <form action="{{ url_for('get_list_chats') }}" method="get">
                 <input class="logo" type="submit" value="Главная страница">
             </form>
             <form action="{{ url_for('get_register') }}" method="get">
