--- a/templates/chat.html
+++ b/templates/chat.html
@@ -19,7 +19,7 @@
 				</form>
 			</div>
 		</div>
-		<h1>Чат</h1>
+		<h1>Чат {{ new_chat_number }}</h1>
 		<script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 		<style>
 			ul {
