--- a/templates/add_new_chat.html
+++ b/templates/add_new_chat.html
@@ -19,46 +19,29 @@
 				</form>
 			</div>
 		</div>
-		<h1>Чат {{ new_chat_number }}</h1>
+		<h1>Новый чат</h1>
 		<script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 		<style>
-			ul {
-				height: 300px;
-				width: 300px;
-				overflow-y: scroll;
-			}
-
-			li {
-				height: min-content;
-				width: min-content;
-				list-style: none;
-				background-color: grey;
-			}
-
 			#message {
 				width: 300px;
 			}
 		</style>
-		<div id="chat">
-			<ul id="chat-messages"></ul>
-			<input type="text" id="message" placeholder="Введите сообщение:">
+		<div id="new_chat">
+			<input type="text" id="message" placeholder="Введите название:">
 		</div>
 		<script>
 			const socket = io();
 			document.getElementById("message").addEventListener("keyup", function(event) {
 				if (event.key == "Enter") {
 					let message = document.getElementById("message").value;
-					socket.emit("new_message", message);
+					socket.emit("add_new_chat", message);
 					document.getElementById("message").value = "";
 				}
 			})
-			socket.on("chat", function(data) {
-				let ul = document.getElementById("chat-messages");
-				let li = document.createElement("li");
-				let br = document.createElement("br");
-				li.appendChild(document.createTextNode(data["username"] + ": " + data["message"]));
-				ul.appendChild(li);
-				ul.appendChild(br);
+			socket.on("add_new_chat", function(data) {
+				let message = document.createElement("h1");
+				message.textContent = data;
+				document.body.appendChild(message);
 			})
 		</script>
     </body>
