--- a/templates/list_chats.html
+++ b/templates/list_chats.html
@@ -61,7 +61,7 @@
 			</div>
 			<div id="new_chat">
 				<form action="{{ url_for('get_add_new_chat') }}" method="get">
-					<input type="submit" value="Cоздать новый чат">
+					<input type="image" src="static/img/new-chat.png" width="35" height="35">
 				</form>
 			</div>
 		</div>
