--- a/templates/list_chats.html
+++ b/templates/list_chats.html
@@ -92,8 +92,8 @@
 						new_li.addEventListener("click", function(event) {
 							console.log(data)
 							chat_link = document.getElementById("chat_link");
-							console.log(chat_link)
-							window.location.href = chat_link + "?new_chat=true";
+							console.log(chat_link + "?open_chat=" + data)
+							window.location.href = chat_link + "?open_chat=" + data;
 						});
 					}
 				});
