--- a/templates/list_chats.html
+++ b/templates/list_chats.html
@@ -52,6 +52,7 @@
 			#find {
 				width: 300px;
 			}
+
 		</style>
 		<div id="body-area">
 			<div id="find_chat">
@@ -61,7 +62,7 @@
 			</div>
 			<div id="new_chat">
 				<form action="{{ url_for('get_add_new_chat') }}" method="get">
-					<input type="image" src="static/img/new-chat.png" width="35" height="35">
+					<input type="submit" value="Создать чат">
 				</form>
 			</div>
 		</div>
