--- a/templates/chat.html
+++ b/templates/chat.html
@@ -19,7 +19,7 @@
 				</form>
 			</div>
 		</div>
-		<h1>Чат {{ chat_name }}</h1>
+		<h1 id="chat_name" data-name="{{ chat_name }}" >Чат {{ chat_name }}</h1>
 		<script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 		<style>
 			ul {
@@ -48,7 +48,9 @@
 			document.getElementById("message").addEventListener("keyup", function(event) {
 				if (event.key == "Enter") {
 					let message = document.getElementById("message").value;
-					socket.emit("new_message", message);
+					chat_name = document.getElementById("chat_name").getAttribute("data-name");
+					console.log(chat_name)
+					socket.emit("new_message", chat_name, message);
 					document.getElementById("message").value = "";
 				}
 			})
