--- a/templates/list_chats.html
+++ b/templates/list_chats.html
@@ -69,7 +69,11 @@
 		<h1>Мои чаты</h1>
 		<a id="chat_link" href="{{ url_for('get_chat') }}"></a>
 		<div id="my_chats">
-			<ul id="list_my_chats"></ul>
+			<ul id="list_my_chats">
+				{% for chat_name in list_chats %}
+					<li><a href="{{ url_for('get_chat') }}?open_chat={{ chat_name }}">{{ chat_name }}</a></li>
+				{% endfor %}
+			</ul>
 		</div>
 		<script>
 			const socket = io();
