--- a/templates/chat.html
+++ b/templates/chat.html
@@ -42,7 +42,7 @@
 		<div id="chat">
 			<ul id="chat-messages">
 				{% for message in list_messages %}
-					<li>{{ message[0] }}: {{ message[1] }}</li>
+					<li>{{ message[0] }}: {{ message[1] }}</li><br>
 				{% endfor %}
 			</ul>
 			<input type="text" id="message" placeholder="Введите сообщение:">
