--- a/templates/add_new_chat.html
+++ b/templates/add_new_chat.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Главная страница</title>
-        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     </head>
     <body>
 		<div class="header">
@@ -21,21 +21,16 @@
 		</div>
 		<h1>Новый чат</h1>
 		<script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
-		<style>
-			#message {
-				width: 300px;
-			}
-		</style>
-		<div id="new_chat">
-			<input type="text" id="message" placeholder="Введите название:">
+		<div class="input-body">
+			<input class="input-body" type="text" id="create_new_chat" placeholder="Введите название:">
 		</div>
 		<script>
 			const socket = io();
-			document.getElementById("message").addEventListener("keyup", function(event) {
+			document.getElementById("create_new_chat").addEventListener("keyup", function(event) {
 				if (event.key == "Enter") {
-					let message = document.getElementById("message").value;
+					let message = document.getElementById("create_new_chat").value;
 					socket.emit("add_new_chat", message);
-					document.getElementById("message").value = "";
+					document.getElementById("create_new_chat").value = "";
 				}
 			})
 			socket.on("add_new_chat", function(data) {
