--- a/templates/add_new_chat.html
+++ b/templates/add_new_chat.html
@@ -21,8 +21,8 @@
 			</div>
 		</div>
 		<h1>Новый чат</h1>
-		<div class="input-body">
-			<input class="input-body" type="text" id="create_new_chat" placeholder="Введите название:">
+		<div>
+			<input class="input-button" type="text" id="create_new_chat" placeholder="Введите название:">
 		</div>
 		<script src="{{ url_for('static', filename='js/add_new_chat.js') }}" async></script>
     </body>
