--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,17 +53,17 @@
     align-items: center;
 }
 
-.input-body {
+.input-button {
     width: 300px;
 }
 
-.find-chat-input {
+.find-chat-area {
     height: 50px;
     width: 300px;
     overflow-y: scroll;
 }
 
-.list-chats {
+.list-my-chats-area {
     height: 200px;
     width: 300px;
     overflow-y: scroll;
@@ -73,4 +73,24 @@
     height: 300px;
     width: 300px;
     overflow-y: scroll;
+}
+
+li {
+    height: min-content;
+    width: min-content;
+    list-style: none;
+    background-color: grey;
+}
+
+li:hover {
+    cursor: pointer;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+a:visited {
+    color: transparent;
 }
