--- a/templates/list_chats.html
+++ b/templates/list_chats.html
@@ -20,7 +20,7 @@
 				</form>
 			</div>
 		</div>
-		<div class="body-area">
+		<div class="list-chats-body-area">
 			<div id="find_chat">
 				<h1>Список найденных чатов</h1>
 				<input class="input-button" type="text" id="find" placeholder="Найти чат:">
