added load messages by chat name

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -20,7 +20,7 @@
 				</form>
 			</div>
 		</div>
-		<h1 id="chat_name" data-name="{{ chat_name }}" >Чат {{ chat_name }}</h1>
+		<h1 id="chat_name" data-name="{{ chat_name }}" >Чат {{ chatname }}</h1>
 		<div id="chat">
 			<ul class="chat-area" id="chat_messages">
 				{% for message in list_messages %}
