--- a/templates/add_new_chat.html
+++ b/templates/add_new_chat.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Главная страница</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-		<script src="https://cdn.socket.io/4.7.2/socket.io.min.js" async></script>
+		<script src="https://cdn.socket.io/4.7.2/socket.io.min.js" defer></script>
     </head>
     <body>
 		<div class="header">
@@ -24,6 +24,6 @@
 		<div>
 			<input class="input-button" type="text" id="create_new_chat" placeholder="Введите название:">
 		</div>
-		<script src="{{ url_for('static', filename='js/add_new_chat.js') }}" async></script>
+		<script src="{{ url_for('static', filename='js/add_new_chat.js') }}" defer></script>
     </body>
 </html>
