--- a/templates/chat.html
+++ b/templates/chat.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Главная страница</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-		<script src="https://cdn.socket.io/4.7.2/socket.io.min.js" async></script>
+		<script src="https://cdn.socket.io/4.7.2/socket.io.min.js" defer></script>
     </head>
     <body>
 		<div class="header">
@@ -24,11 +24,11 @@
 		<div id="chat">
 			<ul class="chat-area" id="chat_messages">
 				{% for message in list_messages %}
-					<li>{{ message[1] }}: {{ message[0] }}</li><br>
+					<li>{{ message[0] }}: {{ message[1] }}</li><br>
 				{% endfor %}
 			</ul>
 			<input class="input-button" type="text" id="message" placeholder="Введите сообщение:">
 		</div>
-		<script src="{{ url_for('static', filename='js/chat.js') }}" async></script>
+		<script src="{{ url_for('static', filename='js/chat.js') }}" defer></script>
     </body>
 </html>
