added delete user buttons

--- a/templates/add_new_chat.html
+++ b/templates/add_new_chat.html
@@ -22,7 +22,7 @@
 		</div>
 		<h1>Новый чат</h1>
 		<div>
-			<input class="input-button" type="text" id="create_new_chat" placeholder="Введите название:">
+			<input class="input-button" type="text" id="create_new_chat" placeholder="Введите название:" maxlength="20">
 		</div>
 		<script src="{{ url_for('static', filename='js/add_new_chat.js') }}" defer></script>
     </body>
