--- a/static/css/style.css
+++ b/static/css/style.css
@@ -64,6 +64,7 @@
 }
 
 .list-my-chats-area {
+    background-color: pink;
     height: 200px;
     width: 300px;
     overflow-y: scroll;
@@ -75,11 +76,24 @@
     overflow-y: scroll;
 }
 
+.my_chats_links {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.delete_chat {
+    width: 25px;
+    background-color: #4169E1;
+    color: transparent;
+}
+
 li {
     height: min-content;
     width: min-content;
     list-style: none;
     background-color: grey;
+    padding: 5px;
 }
 
 li:hover {
