--- a/templates/list_chats.html
+++ b/templates/list_chats.html
@@ -37,7 +37,12 @@
 		<div id="my_chats">
 			<ul class="list-my-chats-area" id="list_my_chats">
 				{% for chatname in list_chats %}
-					<li><a href="{{ url_for('get_chat') }}?open_chat={{ chatname }}">{{ chatname }}</a></li><br>
+					<div class="my_chats_links">
+						<li><a href="{{ url_for('get_chat') }}?open_chat={{ chatname }}">{{ chatname }}</a></li>
+						<form action="{{ url_for('get_delete_chat') }}" method="post">
+							<input class="delete_chat" type="submit" value="Удалить {{ chatname }}" name="button">
+						</form>
+					</div>
 				{% endfor %}
 			</ul>
 		</div>
