--- a/templates/chat.html
+++ b/templates/chat.html
@@ -24,7 +24,12 @@
 		<div id="chat">
 			<ul class="chat-area" id="chat_messages">
 				{% for message in list_messages %}
-					<li>{{ message[0] }}: {{ message[1] }}</li><br>
+					<div class="my_chats_links">
+						<li>{{ message[0] }}: {{ message[1] }}</li>
+						<form action="{{ url_for('get_delete_message') }}" method="post">
+							<input class="delete_button" type="submit" value="{{ message[0] }},{{ chatname }},{{ message[1] }}" name="button-delete-message">
+						</form>
+					</div>
 				{% endfor %}
 			</ul>
 			<input class="input-button" type="text" id="message" placeholder="Введите сообщение:">
