new database again

--- a/templates/register.html
+++ b/templates/register.html
@@ -13,8 +13,8 @@
         </div>
         <h1>Регистрация</h1>
         <form class="login-form" action="/register" method="post">
-            <label for="username">Имя пользователя:</label>
-            <input type="text" id="username" name="username" maxlength="12" minlength="4" required>
+            <label for="login">Имя пользователя:</label>
+            <input type="text" id="login" name="login" maxlength="12" minlength="4" required>
             <label for="password">Пароль:</label>
             <input type="password" id="password" name="password" maxlength="12" minlength="4" required>
             <input type="submit" value="Зарегистрироваться">
