--- a/templates/list_chats.html
+++ b/templates/list_chats.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Список чатов</title>
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-		<script src="https://cdn.socket.io/4.7.2/socket.io.min.js" defer></script>
+		<script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 		<a id="chat_link" href="{{ url_for('get_chat') }}"></a>
 	</head>
 	<body>
@@ -45,6 +45,6 @@
 				{% endfor %}
 			</ul>
 		</div>
-		<script src="{{ url_for('static', filename='js/list_chats.js') }}" defer></script>
+		<script src="{{ url_for('static', filename='js/list_chats.js') }}"></script>
 	</body>
 </html>
