--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,7 +14,7 @@
                 <input type="submit" value="Выйти">
             </form>
         </div>
-        <h1>Профиль пользователя {{ username }}</h1>
+        <h1>Профиль пользователя {{ login }}</h1>
         <p>{{ message }}</p>
         <div class="profile">
         <form action="{{ url_for('get_delete_user') }}" method="get">
