--- a/templates/login.html
+++ b/templates/login.html
@@ -14,13 +14,14 @@
                 <input type="submit" value="Зарегистрироваться">
             </form>
         </div>
-        <h1>Вход</h1>
+        <h3>Вход</h3>
         <form class="login-form" action="/login" method="post">
             <label for="login">Имя пользователя:</label>
             <input type="text" id="login" name="login" maxlength="12" minlength="4" required>
             <label for="password">Пароль:</label>
             <input type="password" id="password" name="password" maxlength="12" minlength="4" required>
             <input type="submit" value="Войти">
-          </form>
+            <p>{{ message }}</p>
+        </form>
     </body>
 </html>
