--- a/templates/register.html
+++ b/templates/register.html
@@ -11,13 +11,14 @@
                 <input class="logo" type="submit" value="Главная страница">
             </form>
         </div>
-        <h1>Регистрация</h1>
+        <h3>Регистрация</h3>
         <form class="login-form" action="/register" method="post">
             <label for="login">Имя пользователя:</label>
             <input type="text" id="login" name="login" maxlength="12" minlength="4" required>
             <label for="password">Пароль:</label>
             <input type="password" id="password" name="password" maxlength="12" minlength="4" required>
             <input type="submit" value="Зарегистрироваться">
+            <p>{{ message }}</p>
         </form>
     </body>
 </html>
